Split User table to Profile and User
